--- a/hello-service-dev.yml
+++ b/hello-service-dev.yml
@@ -1,7 +1,7 @@
 server:
-  port: 8888
+  port: 6666
 eureka:
   client:
     serviceUrl:
       defaultZone: http://localhost:8761/eureka/
-hello: 王老师
+hello: 莫小草
